<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="price"
            type="Float" />
        <variable
            name="feeShip"
            type="Float" />
        <variable
            name="viewModel"
            type="thuypham.n16dccn159.ptithcm.sellingapp.viewmodel.CartViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteBG"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_confirm_order"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorBlue">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBackConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:linksClickable="true"
                android:padding="16dp"
                android:tint="@color/colorWhiteBG"
                app:srcCompat="@drawable/ic_left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/colorWhiteBG"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/receiver_s_address"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name_address_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    tools:text="@string/name_sign_up"
                    android:text="@{viewModel.name}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_phone_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    tools:text="@string/phone"
                    android:text="@{viewModel.phone}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tv_email_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    tools:text="@string/email"
                    android:text="@{viewModel.email}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_address_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    tools:text="@string/add_address"
                    android:text="@{viewModel.address}"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_line1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/payments"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/payment_by_cash_on_delivery"
                    android:textColor="@color/colorTextHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_line2"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/order_information"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhiteBG"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_product_confirm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/the_provisional_amount"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_price_temp_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/_1_290_000"
                        txtPrice="@{price}"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/transportation_fee"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_price_shipping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        txtPrice="@{feeShip}"
                        tools:text="@string/_1_290_000"
                        android:textColor="@color/colorTextHint"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorGrayBg"
                app:layout_constraintBottom_toTopOf="@id/tv_price_cart_conf" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/amount"
                android:textColor="@color/colorTextHint"
                app:layout_constraintStart_toStartOf="@id/btn_payment_conf"
                app:layout_constraintTop_toTopOf="@id/tv_price_cart_conf" />

            <TextView
                android:id="@+id/tv_price_cart_conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                tools:text="@string/_1_290_000"
                txtPrice="@{price+feeShip}"
                android:textColor="@color/colorRedError"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btn_payment_conf"
                app:layout_constraintEnd_toEndOf="@id/btn_payment_conf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/including_vat"
                android:textColor="@color/colorTextHint"
                app:layout_constraintEnd_toEndOf="@id/tv_price_cart_conf"
                app:layout_constraintTop_toBottomOf="@id/tv_price_cart_conf" />

            <TextView
                android:id="@+id/btn_payment_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edit_btn_sign_in"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/payment"
                android:textAllCaps="true"
                android:textColor="@color/colorWhiteBG"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>