<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userViewModel"
            type="thuypham.n16dccn159.ptithcm.sellingapp.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorBlue">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_cancel_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:linksClickable="true"
                    android:padding="16dp"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_left_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/forgot_pasword"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

            </androidx.appcompat.widget.Toolbar>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_email_forgot_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:theme="@style/TextLabel">

                <thuypham.n16dccn159.ptithcm.sellingapp.widget.EditTextField
                    android:id="@+id/edt_email_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_phone_number"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@{userViewModel.email}"
                    android:theme="@style/EditTextTheme"
                    app:clearButtonMode="whileEditing" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                style="@style/Button"
                android:enabled="@{userViewModel.isValidate(userViewModel.email)}"
                android:text="@string/pass_word_reset"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/text_reset_pw" />

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressFpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>